fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -177,3 +177,10 @@
     max-width: 80vw;
   }
 }
+
+@media (max-width: 768px) {
+  .section-1-cover {
+    padding-bottom: 100px;
+    box-sizing: border-box;
+  }
+}
